--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
   "engines": [
     "node >=0.10.0"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikeee/node-canteen.git"
+  },
+  "bugs": {
+    "url": "http://github.com/nikeee/node-canteen/issues"
+  },
   "main": "app.js",
   "dependencies": {
     "cheerio": "~0.17.0",
