--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "scripts": {
     "start": "node app.js",
     "prepublish": "tsc -m CommonJS --removeComments app.ts"
+  },
+  "config": {
+    "port": "8080"
   }
 }
 
