--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cheerio": "~0.17.0",
     "moment": "~2.8.3",
     "request": "~2.42.0",
-    "restify": "~2.8.2",
+    "restify": "~2.8.2"
   },
   "devDependencies": {
     "typescript": "~1.0.3"
