--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "config": {
     "port": "8080",
-    "url": "http://uni.holz.nu"
+    "url": "http://uni.holz.nu",
+    "maxMenuAge": "3600"
   }
 }
