--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "license": "Beerware/Pizzaware",
   "engines": {
-    "node": "~0.10.20"
+    "node": "0.10.20"
   },
   "repository": {
     "type": "git",
