--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "meal",
     "yum"
   ],
-  "version": "0.3.!",
+  "version": "0.3.1",
   "author": {
     "name": "Niklas Mollenhauer",
     "email": "nikeee@outlook.com",
